# spark-connect-example

./: .gitignore  README.md  pom.xml
jvm/: pom.xml
jvm/src/main/java/com/ssinchenko/example/connect/: CollectionsObjectExample.java  ConfExample.java  DFObject.java
jvm/src/main/java/com/ssinchenko/example/proto/: CallDFObjectCreateDataFrame.java  CallDFObjectCreateDataFrameOrBuilder.java  Plugin.java
jvm/src/main/protobuf/example/: plugin.proto
src/main/: buf.gen.yaml  buf.work.yaml
src/main/java/com/ssinchenko/example/lib/: CommandLikeLogic.java  DataFrameLogic.java  ObjectManipulationLogic.java
src/main/java/com/ssinchenko/example/proto/: CallCommandLikeLogic.java  CallCommandLikeLogicOrBuilder.java  CallDataFrameLogic.java  CallDataFrameLogicOrBuilder.java  CallObjectManipulationLogic.java  CallObjectManipulationLogicOrBuilder.java  Plugin.java
src/main/java/com/ssinchenko/example/server/: CommandLikeLogicPlugin.java  DataFrameLogicPlugin.java  ObjectManipulationLogicPlugin.java
src/main/protobuf/: plugin.proto
src/main/protobuf/example/: plugin.proto
src/main/python/: main.py  pyproject.toml
src/main/python/spark_connect_example/: app_plugin.py
src/main/python/spark_connect_example/proto/: plugin_pb2.py  plugin_pb2.pyi
src/main/python/spark_connect_example/proto/example/: plugin_pb2.py
src/test/java/com/ssinchenko/example/lib/: DataFrameLogicTest.java
src/test/java/com/ssinchenko/example/server/: ObjectManipulationLogicPluginTest.java
src/test/resources/: conf_file_example
(+2 files in other folders)
